--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
       integrity=""
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Staatliches&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <title>NewsGrid - Website</title>
   </head>
   <body>
-    <nav class="main-nav">
+    <nav id="main-nav">
       <div class="container">
         <img src="./img/logo.png" alt="Logo" class="logo" />
         <div class="social">
@@ -33,10 +38,10 @@
         </div>
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="/" class="current">Home</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
           </li>
         </ul>
       </div>
