showcase, categories, and buttons

--- a/index.html
+++ b/index.html
@@ -46,5 +46,26 @@
         </ul>
       </div>
     </nav>
+
+    <header id="showcase">
+      <div class="container">
+        <div class="showcase-container">
+          <div class="showcase-content">
+            <div class="category category-sports">Sport</div>
+            <h1>Some Sports Article</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              eius eaque quibusdam a earum inventore facere neque quod vitae
+              expedita nam nemo blanditiis obcaecati vero eveniet provident
+              molestiae ab nulla iste, repudiandae ratione placeat voluptates
+              velit. Saepe excepturi corrupti assumenda.
+            </p>
+            <a href="#" class="btn btn-primary">
+              Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
