--- a/index.html
+++ b/index.html
@@ -163,5 +163,59 @@
         </div>
       </div>
     </section>
+
+    <footer id="main-footer" class="py-2">
+      <div class="container footer-container">
+        <div>
+          <img src="./img/logo_light.png" alt="Footer Logo" />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque,
+            tempora! Non possimus deleniti nam quaerat harum deserunt aperiam
+            quam quisquam?
+          </p>
+        </div>
+        <div>
+          <h3>Email Newsletter</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+            quibusdam!
+          </p>
+          <input type="email" placeholder="Enter Email..." />
+          <button type="button" class="btn btn-primary">
+            Subscribe
+          </button>
+        </div>
+        <div>
+          <h3>Site Links</h3>
+          <ul class="list">
+            <li>
+              <a href="#">Help & Support</a>
+            </li>
+            <li>
+              <a href="#">Privacy & Policy</a>
+            </li>
+            <li>
+              <a href="#">About Us</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>Join Our Club</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis,
+            sint.
+          </p>
+          <a href="#" class="btn btn-secondary">
+            Join Now
+          </a>
+        </div>
+        <div>
+          &copy; 2020, All Right Reserved
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
