--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="pages-container">
           <div class="card">
-            <h3>About Our Organization</h3>
+            <h1 class="l-heading">About Our Organization</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
               blanditiis repudiandae fuga iusto natus error ea magnam voluptatem
