--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/mobile.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <title>NewsGrid - Website</title>
   </head>
@@ -55,11 +59,10 @@
             <div class="category category-sports">Sport</div>
             <h1>Some Sports Article</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              eius eaque quibusdam a earum inventore facere neque quod vitae
-              expedita nam nemo blanditiis obcaecati vero eveniet provident
-              molestiae ab nulla iste, repudiandae ratione placeat voluptates
-              velit. Saepe excepturi corrupti assumenda.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
+              rerum officia quibusdam mollitia deserunt animi soluta laudantium.
+              Quam sapiente a dolorum magnam necessitatibus quis tempore facere
+              totam. Dolor, sequi distinctio!
             </p>
             <a href="#" class="btn btn-primary">
               Read More
