--- a/article.html
+++ b/article.html
@@ -14,9 +14,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/mobile.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <title>NewsGrid - Website</title>
+    <title>NewsGrid | Latest Article</title>
   </head>
   <body>
     <nav id="main-nav">
@@ -41,7 +45,7 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="about.html" class="current">About</a>
+            <a href="about.html">About</a>
           </li>
         </ul>
       </div>
