--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       href="css/mobile.css"
     />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <title>NewsGrid - Website</title>
+    <title>NewsGrid | About</title>
   </head>
   <body>
     <nav id="main-nav">
@@ -42,7 +42,7 @@
         </div>
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="about.html" class="current">About</a>
