--- a/article.html
+++ b/article.html
@@ -42,7 +42,7 @@
         </div>
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="about.html">About</a>
@@ -125,7 +125,7 @@
               </li>
             </ul>
           </aside>
-          <aside class="card bg-primary">
+          <aside class="card bg-secondary">
             <h3>Join Our Club</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
